# rust-grpc-cassandra

./: Cargo.toml  Dockerfile  README.md  build.rs
proto/: block_service.proto  reporting_service.proto
src/: blocking_users_service.rs  cassandra_session.rs  main.rs  reporting_users_service.rs
